# imposter.game

./: .env.example  .gitattributes  .gitignore  ADR-001.md  CLAUDE.md  FrontendDisplayDesign.md  README.md  alembic.ini  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  puzzles.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
backend-engine/: Dockerfile  Dockerfile.test  entrypoint.sh
backend-engine/alembic/: env.py
backend-engine/alembic/versions/: 04bbb7370b42_initial_player_registry.py  a1b2c3d4e5f6_add_narrator_scripts.py  b2c3d4e5f6a7_reseed_narrator_scripts.py  c3d4e5f6a7b8_narrator_hunter_no_elim.py
backend-engine/api/: connection_manager.py  game_queue.py  main.py  timer_tasks.py
backend-engine/api/intents/: dispatch.py  errors.py  handlers.py
backend-engine/api/lobby/: routes.py
backend-engine/api/narrator/: config.py  llm.py  scripts.py  triggers.py  tts.py
backend-engine/api/photos/: routes.py
backend-engine/api/players/: routes.py
backend-engine/api/schemas/: shared_types.ts
backend-engine/api/ws/: endpoint.py
backend-engine/engine/: config.py  hint_bank.py  puzzle_bank.py  roles_loader.py  setup.py  stripper.py
backend-engine/engine/phases/: __init__.py  machine.py
backend-engine/engine/resolver/: __init__.py  _win.py  day.py  hunter.py  night.py  puzzle.py
backend-engine/engine/state/: __init__.py  enums.py  models.py
backend-engine/storage/: db.py  db_writes.py  id_gen.py  models_db.py  redis_store.py
backend-engine/tests/: conftest.py
backend-engine/tests/api/: conftest.py  test_game_phases_integration.py  test_host_controls.py  test_intent_handlers.py  test_lobby_api.py  test_lobby_config.py  test_rematch_api.py  test_websocket_integration.py
backend-engine/tests/e2e/: conftest.py  test_full_game_flow.py  test_game_win_conditions.py
backend-engine/tests/engine/: test_charge_defend.py  test_day_resolver.py  test_framer.py  test_grid_system.py  test_night_resolver.py  test_phase_machine.py  test_puzzle_bank.py  test_setup.py  test_stripper.py
backend-engine/tests/helpers/: game_driver.py  role_utils.py  ws_patterns.py
backend-engine/tests/storage/: test_redis_store.py
docs/architecture/: data_dictionary.md  roles.json
docs/architecture/adr/: ADR-001_werewolf_tech_stack.md  ADR-002_framer_dual_target_architecture.md  (+26 more)
docs/ops/: cli-reference.md  coding-practices.md  hybrid-deploy.md  runbook.md
docs/requirements/: PRD-001_werewolf_core_system.md  PRD-002_werewolf_ui_design.md  PRD-003_werewolf_visual_design_system.md  PRD-004_framer_archives_hack.md  PRD-005_lobby_game_configuration.md  PRD-006_test_helper_storage_parity.md  PRD-007_night_phase_ux.md  PRD-008_llm_tts_host_narrator.md  PRD-008_mobile_component_test_coverage.md  PRD-009_hunter_routing_fix.md  PRD-010_archive_hint_enhancement.md  PRD-011_display_pregame_settings.md  PRD-012_audio_ux_enhancements.md  PRD-013_night_grid_wolf_radar.md  PRD-014_host_game_control.md  PRD-015_wolf_charge_defend.md
frontend-display/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend-display/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend-mobile/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend-mobile/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
scripts/: prebake_tts.py
(+156 files in other folders)
