# Werewolf — Python Game Engine
#
# INSTALLATION:
#   pip install -e ".[dev,test]"
#
# RUNNING:
#   uvicorn api.main:app --reload --app-dir backend-engine
#
# TESTING:
#   pytest backend-engine/tests/ -v

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "werewolf"
version = "0.1.0"
description = "Werewolf digital party game — FastAPI + WebSockets backend engine"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Beth", email = "beth88.career@gmail.com"}
]
keywords = ["werewolf", "mafia", "social-deduction", "fastapi", "websockets"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "fakeredis[aioredis]>=2.20.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "backend-engine"}

[tool.setuptools.packages.find]
where = ["backend-engine"]
include = ["engine*", "api*", "storage*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["backend-engine/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--timeout=30",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring Redis",
    "unit: marks tests as pure unit tests (no I/O)",
    "e2e: marks end-to-end tests requiring full stack",
]

[tool.coverage.run]
source = ["backend-engine"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade — catches Pydantic V1 patterns
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_redundant_casts = true
check_untyped_defs = true

[tool.pylint.main]
max-line-length = 100
ignore-patterns = ["test_.*\\.py"]

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
]

[tool.pylint.design]
max-locals = 20
max-args = 8
